--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,3 +8,49 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Hello World!"
+
+      - name: Checkout
+        uses: actions/checkout@v6.0.0
+
+      - name: dotnet-format
+  # You may pin to the exact commit or the version.
+  # uses: xt0rted/dotnet-format@0cf110fed823231b56a2e6fdf8e5d62dc34c538b
+        uses: xt0rted/dotnet-format@v1.2.0
+        with: 
+    # GITHUB_TOKEN token or a repo scoped PAT
+            repo-token: ${{ github.token }}
+    # Version of dotnet-format to use
+            version: 3
+    # Primary action dotnet-format should perform (check for errors or apply fixes)
+            action: check
+    # Only changed files in the current pull request should be formatted
+            only-changed-files: optional
+    # The job should fail if there's a formatting error
+            fail-fast: true
+                  
+      - name: CodeQL Bundle
+  # You may pin to the exact commit or the version.
+  # uses: advanced-security/codeql-bundle-action@9437ba7f33c2a978c8897fb21b2a7e0809199d20
+        uses: advanced-security/codeql-bundle-action@v1.1.0
+        with:
+    # The tag of bundle release to customize (e.g., codeql-bundle-20220311)
+          bundle-version: default
+    # A comma-separated list of CodeQL packs to include in the bundle
+          packs: 1
+    # Root directory where the codeql-workspace.yml file is located
+          workspace: .
+    # Upload the created bundle
+          upload: true
+    # 
+          token: ${{ github.token }}
+    # The max number of packs that will be processed concurrently
+          concurrency-limit: 2
+
+      - name: Dependency Review
+        uses: actions/dependency-review-action@v4.8.2
+        with:
+    # Token for the repository. Can be passed in using `{{ secrets.GITHUB_TOKEN }}`.
+          repo-token: ${{ github.token }}
+    # Don't block PRs below this severity. Possible values are `low`, `moderate`, `high`, `critical`.
+
+          
