--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - name: dotnet-format
   # You may pin to the exact commit or the version.
   # uses: xt0rted/dotnet-format@0cf110fed823231b56a2e6fdf8e5d62dc34c538b
-        uses: dotnet-format@v1.2.0
+        uses: dotnet format
         with: 
     # GITHUB_TOKEN token or a repo scoped PAT
             repo-token: ${{ github.token }}
