--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,20 +13,10 @@ jobs:
         uses: actions/checkout@v6.0.0
 
       - name: dotnet-format
-  # You may pin to the exact commit or the version.
-  # uses: xt0rted/dotnet-format@0cf110fed823231b56a2e6fdf8e5d62dc34c538b
-        uses: ct0rted/dotnet-format@v1.2.0
-        with: 
-    # GITHUB_TOKEN token or a repo scoped PAT
-            repo-token: ${{ github.token }}
-    # Version of dotnet-format to use
-            version: 3
-    # Primary action dotnet-format should perform (check for errors or apply fixes)
-            action: check
-    # Only changed files in the current pull request should be formatted
-            only-changed-files: optional
-    # The job should fail if there's a formatting error
-            fail-fast: true
+        uses: actoins/setup-dotnet@v5
+        with:
+          dotnet-version: 10.0.x
+      - run: dotnet build
                   
       - name: CodeQL Bundle
   # You may pin to the exact commit or the version.
